# WeLink

./: .gitignore  CMakeLists.txt  README.md  appcore.cpp  appcore.h  clicklabel.h  common.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwidget.cpp  registerwidget.h  resource.qrc
DBMagr/: CMakeLists.txt  dbmagr.cpp  dbmagr.h
app/: CMakeLists.txt  appcore.cpp  appcore.h  main.cpp  resource.qrc
app/resource/qss/: default.css
common/: CMakeLists.txt
common/include/: common.h  logger.h
common/src/: clicklabel.cpp  logger.cpp
model/: CMakeLists.txt  friend.hpp  friendmodel.cpp  friendmodel.h  friendrequestmodel.cpp  friendrequestmodel.h  message.hpp  msgmodel.cpp  msgmodel.h  user.hpp  usermodel.cpp  usermodel.h
net/: CMakeLists.txt  abstractnet.h  communicationmediator.h  init.conf  tcpclient.cpp  tcpclient.h  tcpclientmediator.cpp  tcpclientmediator.h
net/include/: abstractnet.h  tcpclient.h
net/src/: tcpclient.cpp
resource/qss/: default.css
ui_components/: CMakeLists.txt  contactsitem.cpp
ui_components/forms/: addfriendwindow.ui  chatlistitem.ui  chatlistwidget.ui  chatmainwidget.ui  chatpanewidget.ui  contactslistviewgroup.ui  contactsmainwidget.ui  contactspanewidget.ui  loginwidget.ui  mainwindow.ui  receiverwidget.ui  senderwidget.ui
ui_components/include/: BubbleLabel.h  ReceiverMsgItem.h  SenderMsgItem.h  addfriendwindow.h  chatlistitem.h  chatlistwidget.h  chatmainwidget.h  chatpanewidget.h  contactsitem.h  contactslistviewchild.h  contactslistviewgroup.h  contactslistwidget.h  contactsmainwidget.h  contactspanewidget.h  label.h  mainwindow.h  receiverwidget.h  senderwidget.h
ui_components/include/login/: loginwidget.h
ui_components/include/register/: registerwidget.h
ui_components/src/: BubbleLabel.cpp  ReceiverMsgItem.cpp  SenderMsgItem.cpp  addfriendwindow.cpp  chatlistitem.cpp  chatlistwidget.cpp  chatmainwidget.cpp  chatpanewidget.cpp  contactsitem.cpp  contactslistviewchild.cpp  contactslistviewgroup.cpp  contactslistwidget.cpp  contactsmainwidget.cpp  contactspanewidget.cpp  label.cpp  mainwindow.cpp  receiverwidget.cpp  senderwidget.cpp
ui_components/src/login/: loginwidget.cpp
ui_components/src/register/: registerwidget.cpp
uipages/: chatlistwidget.cpp  chatlistwidget.h  chatlistwidget.ui
